--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry kind="lib" path="src/lib/mina-core-2.0.19.jar"/>
 	<classpathentry kind="lib" path="src/lib/slf4j-simple-2.0.7.jar"/>
 	<classpathentry kind="lib" path="src/lib/slf4j-api-2.0.7.jar"/>
+	<classpathentry kind="lib" path="src/lib/json_simple-1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
