프로젝트 jar 파일 설정 변경 (scp 제거)

--- a/.classpath
+++ b/.classpath
@@ -2,17 +2,16 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="src/lib/ftplet-api-1.2.0.jar" sourcepath="G:/MavenRepository/repository/org/apache/ftpserver/ftplet-api/1.2.0/ftplet-api-1.2.0-sources.jar"/>
-	<classpathentry kind="lib" path="src/lib/ftpserver-core-1.2.0.jar" sourcepath="G:/MavenRepository/repository/org/apache/ftpserver/ftpserver-core/1.2.0/ftpserver-core-1.2.0-sources.jar"/>
+	<classpathentry kind="lib" path="src/lib/ftplet-api-1.2.0.jar" />
+	<classpathentry kind="lib" path="src/lib/ftpserver-core-1.2.0.jar" />
 	<classpathentry kind="lib" path="src/lib/mina-core-2.0.19.jar"/>
 	<classpathentry kind="lib" path="src/lib/slf4j-simple-2.0.7.jar"/>
 	<classpathentry kind="lib" path="src/lib/slf4j-api-2.0.7.jar"/>
 	<classpathentry kind="lib" path="src/lib/json_simple-1.1.jar"/>
-	<classpathentry kind="lib" path="src/lib/sshd-common-2.10.0.jar"/>
 	<classpathentry kind="lib" path="src/lib/sshd-core-2.10.0.jar"/>
-	<classpathentry kind="lib" path="src/lib/sshd-scp-2.10.0.jar"/>
 	<classpathentry kind="lib" path="src/lib/netty-all-4.0.56.Final.jar"/>
 	<classpathentry kind="lib" path="src/lib/sshd-netty-2.10.0.jar"/>
 	<classpathentry kind="lib" path="src/lib/sshd-sftp-2.10.0.jar"/>
+	<classpathentry kind="lib" path="src/lib/sshd-common-2.10.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
